--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -16,8 +16,10 @@
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-gauge-chart": "^0.5.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.15.1",
     "typescript": "^4.9.5",
     "web-vitals": "^4.2.4"
   },
