--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -13,13 +13,12 @@
     "axios": "^1.7.9",
     "chartjs": "^0.3.24",
     "cra-template-typescript": "1.2.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "react-gauge-chart": "^0.5.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1",
-    "recharts": "^2.15.1",
     "typescript": "^4.9.5",
     "web-vitals": "^4.2.4"
   },
@@ -50,6 +49,7 @@
   "devDependencies": {
     "@types/css-modules": "^1.0.5",
     "@types/jest": "^29.5.14",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^22.13.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3"
